--- a/css/style.css
+++ b/css/style.css
@@ -1,113 +1,128 @@
-.header-section{
- background: #2d2c2c;
+.header-section {
+    background: #2d2c2c;
 }
 
-.btn-header{
-	padding: 30px 0;
-	color: #fff;
+.btn-header {
+    padding: 30px 0;
+    color: #fff;
 }
 
-.btn-header p{
-	max-width: 80%;
+.btn-header p {
+    max-width: 80%;
 }
 
-.btn-header h2 span{
-	font-weight: 800;
+.btn-header h2 span {
+    font-weight: 800;
 }
 
 .navbar-nav > li > a {
     padding-top: 15px;
     padding-bottom: 15px;
-    background: none;
+    background: black;
 }
 
-.navbar-toggle{
-	background-color: gray;
-	opacity: .5;
+.navbar-toggle {
+    background-color: gray;
+    opacity: 1;
 }
-.navbar-nav > li > a:hover{
+
+.navbar-nav > li > a:hover {
     color: #ea6660;
     text-decoration: none;
-    background: none;
-}
-.btn-header p{
-	width: 800px;
-	margin: 0 auto;
-	margin-bottom: 20px;
+    background: #2d2c2c;
 }
 
-.product-single p{
-	line-height: 25px;
+.btn-header p {
+    width: 800px;
+    margin: 0 auto;
+    margin-bottom: 20px;
 }
 
-.btn-custom{
-	padding: 10px 30px;
-	background-color: #ff6760;
-	text-transform: uppercase;
-	font-weight: 600;
-
+.product-single p {
+    line-height: 25px;
 }
 
-.navbar{
+.btn-custom {
+    padding: 10px 30px;
+    background-color: #ff6760;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.navbar {
     background: #040404;
     height: 62px;
 }
-.navbar-right li a{
-	color: white;
-	text-transform: uppercase;
+
+.navbar-right li a {
+    color: white;
+    text-transform: uppercase;
     line-height: 31px;
 }
 
-.product{padding: 50px;background: #fbfbfb;}
-
-
-.features{padding: 35px;}
-
-.features-menu{margin-top: 25px;}
-
-.features-menu li{padding: 10px;}
-.features-menu li a{color: #fff;
-	background: #f75f5f;
-	display: block;padding: 5px 20px;
-	border-radius: 5px;
-}
-.features-menu li a:hover{
-	background: #484545;
-	text-decoration: none;
+.product {
+    padding: 50px;
+    background: #fbfbfb;
 }
 
-
-.features-img-single{margin: 5px;}
-
-.features-img-single img{
-	width: 100%;
-	height: 100%;
+.features {
+    padding: 35px;
 }
 
-.footer-top{background: #2f2d2d;padding: 16px 0;color: #fff;}
-
-.footer-text{
-
-}
-.col-sm-3{
-	margin: 0;
-	padding: 0;
+.features-menu {
+    margin-top: 25px;
 }
 
-.footer-text h2{
-	
-}
-.footer-text p{
-	
-}
-.footer-text i{
-	color: #d4686a;
+.features-menu li {
+    padding: 10px;
 }
 
+.features-menu li a {
+    color: #fff;
+    background: #f75f5f;
+    display: block;
+    padding: 5px 20px;
+    border-radius: 5px;
+}
 
-.social ul li .fa-dribbble{
-	background-color: #e9a0c4;
-	margin-right: 5px;
+.features-menu li a:hover {
+    background: #484545;
+    text-decoration: none;
+}
+
+.features-img-single {
+    margin: 5px;
+}
+
+.features-img-single img {
+    width: 100%;
+    height: 100%;
+}
+
+.footer-top {
+    background: #2f2d2d;
+    padding: 16px 0;
+    color: #fff;
+}
+
+.footer-text {}
+
+.col-sm-3 {
+    margin: 0;
+    padding: 0;
+}
+
+.footer-text h2 {}
+
+.footer-text p {}
+
+.footer-text i {
+    color: #d4686a;
+}
+
+.social ul li .fa-dribbble {
+    background-color: #e9a0c4;
+    margin-right: 5px;
     display: inline-block;
     border-radius: 50%;
     width: 30px;
@@ -116,9 +131,10 @@
     line-height: 30px;
     color: #fff;
 }
-.social ul li .fa-rss{
-	background-color: #f3b25b;
-	margin-right: 5px;
+
+.social ul li .fa-rss {
+    background-color: #f3b25b;
+    margin-right: 5px;
     display: inline-block;
     border-radius: 50%;
     width: 30px;
@@ -128,9 +144,9 @@
     color: #fff;
 }
 
-.social ul li .fa-facebook{
-	background-color: #5883c0;
-	margin-right: 5px;
+.social ul li .fa-facebook {
+    background-color: #5883c0;
+    margin-right: 5px;
     display: inline-block;
     border-radius: 50%;
     width: 30px;
@@ -139,9 +155,10 @@
     line-height: 30px;
     color: #fff;
 }
-.social ul li .fa-pinterest{
-	background-color: #d35051;
-	margin-right: 5px;
+
+.social ul li .fa-pinterest {
+    background-color: #d35051;
+    margin-right: 5px;
     display: inline-block;
     border-radius: 50%;
     width: 30px;
@@ -150,9 +167,10 @@
     line-height: 30px;
     color: #fff;
 }
-.social ul li .fa-twitter{
-	background-color: #63bee0;
-	margin-right: 5px;
+
+.social ul li .fa-twitter {
+    background-color: #63bee0;
+    margin-right: 5px;
     display: inline-block;
     border-radius: 50%;
     width: 30px;
@@ -161,22 +179,23 @@
     line-height: 30px;
     color: #fff;
 }
-footer{background: #000;padding: 30px;color: #fff;}
 
-.fa-map-marker{color: #ea6660;}
 
-.fa-map-marker span{color: #fff;}
-
-.fa-phone{
-
+.fa-map-marker {
+    color: #ea6660;
 }
 
-.fa-phone span{color: #fff;}
+.fa-map-marker span {
+    color: #fff;
+}
+
+.fa-phone span {
+    color: #fff;
+}
 
 
-
-
-
-
-
-
+footer {
+    background: #000;
+    padding: 30px;
+    color: #fff;
+}
